[gd_scene load_steps=3 format=3 uid="uid://darnyv4af5ml5"]

[ext_resource type="FontFile" uid="uid://b05abb6xberv3" path="res://Fonts/VCR_OSD_MONO.ttf" id="1_7nmht"]
[ext_resource type="Script" path="res://game_over_scene.gd" id="1_r2k6n"]

[node name="GameOverScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r2k6n")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="LblGameOver" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("1_7nmht")
theme_override_font_sizes/font_size = 128
text = "Game Over"

[node name="LblTotalScore" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Total Score: "
horizontal_alignment = 1

[node name="LblSkip" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Press Space To Skip"
horizontal_alignment = 1

[node name="ReadyTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="ReadyTimer" to="." method="_on_timer_timeout"]
